--- a/app/views/cars/edit.html.erb
+++ b/app/views/cars/edit.html.erb
@@ -1,4 +1,4 @@
 <div class="container">
-  <h3 class = "text-center m-3">Add your car</h3>
+  <h3 class = "text-center m-3">Editing <%= @car.model %></h3>
   <%= render "shared/car_form"%>
 </div>
